Stop numbers from flowing out of screen

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ button:hover {
     margin: 0px 0px 15px;
     border-radius: 6px;
     background-color: #b8f2e6;
+    overflow: hidden;
 }
 
 .result {
@@ -88,3 +89,6 @@ footer {
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+/* Colour palette from 
+https://coolors.co/palette/ffa69e-faf3dd-b8f2e6-aed9e0-5e6472 */
